--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 #cloudbuild.yaml
 steps:
-- name: ‘docker/compose:1.19.0’
-  args: [‘build’]
-- name: ‘docker/compose:1.19.0’
-  args: [‘up’, ‘-d’]
+- name: 'gcr.io/$PROJECT_ID/docker-compose'
+  args: ['build']
+- name: 'gcr.io/$PROJECT_ID/docker-compose'
+  args: ['up']
